# CUDAProject

./: .gitignore  CMakeLists.txt  ImageProcessor.cu  Makefile  README.md  cpu_img_processor.cpp  gpu_img_processor.cu  grayscale-cu  log.txt  sobel.cu
benchmark/result-shared/: 1024-1024  1024-128  1024-192  1024-256  1024-320  1024-384  1024-448  1024-512  1024-576  1024-64  1024-640  1024-704  1024-768  1024-832  1024-896  1024-960  128-1024  128-128  128-192  128-256  128-320  128-384  128-448  128-512  128-576  128-64  128-640  128-704  128-768  128-832  128-896  128-960  192-1024  192-128  192-192  192-256  192-320  192-384  192-448  192-512  (+216 more)
benchmark/result-shared-streams/: 1024-1024  1024-128  1024-192  1024-256  1024-320  1024-384  1024-448  1024-512  1024-576  1024-64  1024-640  1024-704  1024-768  1024-832  1024-896  1024-960  128-1024  128-128  128-192  128-256  128-320  128-384  128-448  128-512  128-576  128-64  128-640  128-704  128-768  128-832  128-896  128-960  192-1024  192-128  192-192  192-256  192-320  192-384  192-448  192-512  (+216 more)
benchmark/result-std/: 1024-1024  1024-128  1024-192  1024-256  1024-320  1024-384  1024-448  1024-512  1024-576  1024-64  1024-640  1024-704  1024-768  1024-832  1024-896  1024-960  128-1024  128-128  128-192  128-256  128-320  128-384  128-448  128-512  128-576  128-64  128-640  128-704  128-768  128-832  128-896  128-960  192-1024  192-128  192-192  192-256  192-320  192-384  192-448  192-512  (+216 more)
benchmark/result-streams/: 1024-128  1024-320  1024-448  1024-576  1024-640  1024-704  1024-768  128-128  128-256  128-512  128-576  128-704  128-896  128-960  192-128  192-64  192-640  192-768  192-896  256-128  256-192  256-320  256-384  256-512  256-576  256-704  256-832  256-896  320-128  320-192  320-256  320-320  320-576  320-64  384-1024  384-256  384-320  384-448  384-512  384-640  (+74 more)
benchmark/result-streams-2/: 1024-1024  1024-128  1024-192  1024-256  1024-320  1024-384  1024-448  1024-512  1024-576  1024-64  1024-640  1024-704  1024-768  1024-832  1024-896  1024-960  128-1024  128-128  128-192  128-256  128-320  128-384  128-448  128-512  128-576  128-64  128-640  128-704  128-768  128-832  128-896  128-960  192-1024  192-128  192-192  192-256  192-320  192-384  192-448  192-512  (+216 more)
benchmark/result-streams-4/: 1024-1024  1024-128  1024-192  1024-256  1024-320  1024-384  1024-448  1024-512  1024-576  1024-64  1024-640  1024-704  1024-768  1024-832  1024-896  1024-960  128-1024  128-128  128-192  128-256  128-320  128-384  128-448  128-512  128-576  128-64  128-640  128-704  128-768  128-832  128-896  128-960  192-1024  192-128  192-192  192-256  192-320  192-384  192-448  192-512  (+216 more)
benchmark_results/: 1024-1024  1024-1024-shared  1024-1024-shared-streams  1024-1024-streams  1024-128  1024-128-shared  1024-128-shared-streams  1024-128-streams  1024-192  1024-192-shared  1024-192-shared-streams  1024-192-streams  1024-256  1024-256-shared  1024-256-shared-streams  1024-256-streams  1024-320  1024-320-shared  1024-320-shared-streams  1024-320-streams  1024-384  1024-384-shared  1024-384-shared-streams  1024-384-streams  1024-448  1024-448-shared  1024-448-shared-streams  1024-448-streams  1024-512  1024-512-shared  1024-512-shared-streams  1024-512-streams  1024-576  1024-576-shared  1024-576-shared-streams  1024-576-streams  1024-64  1024-64-shared  1024-64-shared-streams  1024-64-streams  (+984 more)
lib/: convolution_transform.cpp  convolution_transform.hpp
lib/common/: convmatrix_lib.cpp  convmatrix_lib.hpp  menu_lib.cpp  menu_lib.hpp  utilities.cpp  utilities.hpp
lib/cpu/: cpu_convolution_transform.cpp  cpu_convolution_transform.hpp  cpu_img_transform.cpp  cpu_img_transform.hpp  cpu_utilities.cpp  cpu_utilities.hpp
lib/gpu/: gpu_img_transform.cu  gpu_img_transform.cuh  gpu_img_transform_stream.cu  gpu_img_transform_stream.cuh  gpu_utilities.cu  gpu_utilities.cuh
rapport/: benchmark_deuxieme_approche.ods  benchmark_premiere_approche.ods
